# BusinessClaw

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  railway.toml
businessclaw/: __init__.py  __main__.py  settings.py
businessclaw/api/: __init__.py  app.py
businessclaw/core/: audit.py  models.py  runtime.py  workcycle.py
businessclaw/discord_bot/: __init__.py  __main__.py  bot.py  formatting.py
businessclaw/llm/: __init__.py  anthropic.py  base.py  factory.py  mock.py  openai_compatible.py
businessclaw/tools/: base.py  builtin.py  registry.py
businessclaw/wallet/: __init__.py  base.py  evm.py  factory.py  mock.py
config/: agent.rules.md  example.env  mcp.servers.example.json  openclaw.businessclaw.patch.example.json5  production.env.example
dashboard/: README.md  package-lock.json  package.json  server.mjs
dashboard/public/: app.js  index.html  office.js  styles.css
dashboard/tests/: qa.mjs  smoke.mjs  (+1 more)
docs/: ARCHITECTURE.md  AUTONOMY.md  BOARD_MODEL.md  BUILD_PLAN.md  COST_CONTROL.md  DASHBOARD.md  DEPLOYMENT.md  DEPLOYMENT_OPENCLAW.md  DISCORD_ROUTING.md  DISCORD_SETUP.md  LOCAL_DEVELOPMENT.md  MIGRATION_CHECKLIST.md  MODEL_SETUP.md  OPENCLAW_PIVOT.md  PERMISSIONS.md  SAFETY_RULES.md  VPS_CHECKLIST.md  WALLET_SETUP.md
scripts/: bootstrap-vps.sh  enable-discord.ps1  install-vps-services.sh  limiter.toml  searxng-settings.yml  set-cheapest-openai-model.ps1  setup-businessclaw-openclaw.ps1  stage-autonomy-jobs.ps1  stage-autonomy-jobs.sh  start-dashboard.ps1  start-production.sh  verify-businessclaw-vps.sh  verify-businessclaw.ps1
(+26 files in other folders)
